Fix scrollbar issues

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ body {
   min-height: 100vh;
   width: 100vw;
   background-color: rgb(30, 30, 30);
+  overflow-x: hidden;
 }
 
 h1 {
