--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -35,8 +35,9 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  overflow: scroll;
+  overflow: auto;
   max-height: 80%;
+  overflow-x: hidden;
 }
 
 #clear-cart-button {
