--- a/src/styles/CartGame.css
+++ b/src/styles/CartGame.css
@@ -21,6 +21,10 @@
   flex-direction: column;
 }
 
+.cart-game-info > h3 {
+  font-size: 1rem;
+}
+
 .cart-game-info > h3, p {
   margin: 0;
 }
