--- a/src/styles/SearchBar.css
+++ b/src/styles/SearchBar.css
@@ -2,6 +2,7 @@
   width: 300px;
   transition: width 0.2s ease;
   position: relative;
+  overflow-x: clip;
 }
 
 .search-bar:focus-within {
@@ -23,7 +24,7 @@
   transition: width 0.2s ease;
 }
 
-.search-area> input {
+.search-area > input {
   max-width: 80%;
   flex-grow: 1;
   outline: none;
@@ -47,7 +48,8 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  overflow: scroll;
+  overflow: auto;
+  overflow-x: hidden;
   border-radius: 12px;
   z-index: 10000;
 }
